--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 
 @media (max-width: 450px) {
-  main {
+  ul {
     flex-direction: column;
     align-items: center;
   }
@@ -18,7 +19,7 @@
   }
 }
 body {
-  background: linear-gradient(to top, #41ce80, #21613e);
+  background: #EEF9BF;
 }
 
 header {
@@ -30,10 +31,10 @@ header h1 {
   font-size: 56px;
   font-family: "Roboto";
   text-align: center;
-  color: #db39a5;
+  color: #75B79E;
 }
 
-main {
+ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -47,21 +48,24 @@ main {
   position: relative;
   margin: 10px 15px;
 }
-
 .card__img {
   width: 100px;
   height: 100px;
+  border-radius: 5px;
 }
-
 .card__gif {
   width: 100px;
   height: 100px;
+  border-radius: 5px;
+}
+.card__back {
+  transform: rotateY(180deg);
 }
 
-.madruga {
+.face {
   width: 100%;
   height: 100%;
-  background-color: #0702AF;
+  background-color: #99CEA8;
   border-radius: 10px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
   display: flex;
@@ -72,10 +76,6 @@ main {
           backface-visibility: hidden;
   transition: all 0.5s;
   transform-style: preserve-3d;
-}
-
-.card__back {
-  transform: rotateY(180deg);
 }
 
 .card:hover .card__back {
