--- a/scss/index.scss
+++ b/scss/index.scss
@@ -3,9 +3,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
 }
 @media (max-width: 450px) {
-  main {
+  ul {
     flex-direction: column;
     align-items: center;
   }
@@ -17,20 +18,20 @@
   }
 }
 body {
-  background: linear-gradient(to top, #41ce80,#21613e);
+  background: #EEF9BF;
 }
 header {
   display: flex;
   justify-content: center;
-  & h1 {
+   h1 {
     margin-top: 40px;
     font-size: 56px;
     font-family: "Roboto"; 
     text-align: center; 
-    color: #db39a5;
+    color: #75B79E;
   }
 }
-main {
+ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -42,19 +43,24 @@ main {
   height: 146px;
   position: relative;
   margin: 10px 15px;
+  &__img {
+    width: 100px;
+    height: 100px;
+    border-radius: 5px;
+  }
+  &__gif {
+    width: 100px;
+    height: 100px;
+    border-radius: 5px;
+  }
+  &__back {
+  transform: rotateY(180deg);
 }
-.card__img {
-  width: 100px;
-  height: 100px;
 }
-.card__gif{
-  width: 100px;
-  height: 100px;
-}
-.madruga {
+.face {
   width: 100%;
   height: 100%;
-  background-color: #0702AF;
+  background-color: #99CEA8;
   border-radius: 10px;
   box-shadow: 1px 1px 1px rgba(0,0,0,.3);
   display: flex;
@@ -65,12 +71,11 @@ main {
   transition: all .5s;
   transform-style: preserve-3d;
 }
-.card__back {
-  transform: rotateY(180deg);
-}
+
 .card:hover .card__back {
+  // display: none;
   transform: rotateY(0deg);
 }
-.card:hover .card__front {
+.card:hover .card__front{
   transform: rotateY(-180deg);
 }
