--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,16 +5,16 @@
   box-sizing: border-box;
   list-style: none;
 }
-@media (max-width: 450px) {
-  ul {
-    flex-direction: column;
-    align-items: center;
-  }
-  h1 {
+@media (max-width: 600px) {
+  header h1 {
     font-size: 36px;
-    line-height: 50px;
+    line-height: 40px;
     align-items: center;
     text-align: center;
+  }
+   ul {
+    flex-direction: column;
+    align-items: center;
   }
 }
 body {
@@ -23,13 +23,13 @@ body {
 header {
   display: flex;
   justify-content: center;
-   h1 {
-    margin-top: 40px;
-    font-size: 56px;
-    font-family: "Roboto"; 
-    text-align: center; 
-    color: #75B79E;
-  }
+}
+h1 {
+  margin-top: 40px;
+  font-size: 56px;
+  font-family: "Roboto"; 
+  text-align: center; 
+  color: #75B79E;
 }
 ul {
   display: flex;
@@ -43,6 +43,7 @@ ul {
   height: 146px;
   position: relative;
   margin: 10px 15px;
+  transform: rotateY(180deg);
   &__img {
     width: 100px;
     height: 100px;
@@ -55,7 +56,10 @@ ul {
   }
   &__back {
   transform: rotateY(180deg);
-}
+  }
+  &__front {
+    transform: rotateY(0deg);
+  }
 }
 .face {
   width: 100%;
@@ -72,10 +76,9 @@ ul {
   transform-style: preserve-3d;
 }
 
-.card:hover .card__back {
-  // display: none;
-  transform: rotateY(0deg);
-}
-.card:hover .card__front{
-  transform: rotateY(-180deg);
-}
+// .card:hover .card__back {
+//   transform: rotateY(0deg);
+// }
+// .card:hover .card__front{
+//   transform: rotateY(-180deg);
+// }
