Travando o giro das cartas

--- a/css/index.css
+++ b/css/index.css
@@ -89,4 +89,8 @@ ul {
 
 .card__front--flip {
   transform: rotateY(-180deg);
+}
+
+.block {
+  pointer-events: none;
 }/*# sourceMappingURL=index.css.map */
