--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@100;300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -19,7 +19,8 @@
   }
 }
 body {
-  background: #EEF9BF;
+  background-image: url(../img/turma.jpg);
+  background-size: cover;
 }
 
 header {
@@ -29,10 +30,10 @@ header {
 
 h1 {
   margin-top: 40px;
-  font-size: 56px;
-  font-family: "Roboto";
+  font-size: 60px;
+  font-family: "Bangers", cursive;
   text-align: center;
-  color: #75B79E;
+  color: #2962ff;
 }
 
 ul {
@@ -48,7 +49,6 @@ ul {
   height: 146px;
   position: relative;
   margin: 10px 15px;
-  transform: rotateY(180deg);
 }
 .card__img {
   width: 100px;
@@ -70,7 +70,7 @@ ul {
 .face {
   width: 100%;
   height: 100%;
-  background-color: #99CEA8;
+  background-color: #0245fd;
   border-radius: 10px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
   display: flex;
