--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Roboto:wght@100;300;400;500;700&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +11,7 @@
     line-height: 40px;
     align-items: center;
     text-align: center;
+ 
   }
    ul {
     flex-direction: column;
@@ -18,7 +19,9 @@
   }
 }
 body {
-  background: #EEF9BF;
+  // background: #EEF9BF;
+  background-image: url(../img/turma.jpg);
+  background-size: cover;
 }
 header {
   display: flex;
@@ -26,10 +29,11 @@ header {
 }
 h1 {
   margin-top: 40px;
-  font-size: 56px;
-  font-family: "Roboto"; 
+  font-size: 60px;
+  font-family: 'Bangers', cursive;
   text-align: center; 
-  color: #75B79E;
+  // color: #75B79E;
+  color: #2962ff;
 }
 ul {
   display: flex;
@@ -37,13 +41,14 @@ ul {
   justify-content: center;
   margin: 40px auto;
   max-width: 1000px;
+  
 }
 .card {
   width: 117px;
   height: 146px;
   position: relative;
   margin: 10px 15px;
-  transform: rotateY(180deg);
+  // transform: rotateY(180deg);
   &__img {
     width: 100px;
     height: 100px;
@@ -53,6 +58,7 @@ ul {
     width: 100px;
     height: 100px;
     border-radius: 5px;
+    // border: rgb(19, 3, 252) 1px solid;
   }
   &__back {
   transform: rotateY(180deg);
@@ -64,7 +70,7 @@ ul {
 .face {
   width: 100%;
   height: 100%;
-  background-color: #99CEA8;
+  background-color: #0245fd;
   border-radius: 10px;
   box-shadow: 1px 1px 1px rgba(0,0,0,.3);
   display: flex;
